--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-hook-form": "^7.54.1",
     "react-i18next": "^15.1.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "yup": "^1.6.1"
   }
 }
